# clync

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
docs/: cli-usage.md  for-me.md
docs/specs/: claude-settings-sink.md
homebrew/: README.md  claudy.rb  clync.rb
src/: error.rs  lib.rs  main.rs  update.rs
src/backup/: manager.rs  mod.rs
src/cli/: commands.rs  mod.rs
src/config/: loader.rs  mod.rs  model.rs
src/github/: api.rs  auth.rs  mod.rs
src/sync/: diff.rs  mod.rs  pull.rs  push.rs  status.rs
src/whitelist/: matcher.rs  mod.rs
