[package]
name = "clync"
version = "0.1.0"
edition = "2021"
description = "Claude Code 설정 동기화 도구"
license = "MIT"
repository = "https://github.com/novdov/clync"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
walkdir = "2"
similar = "2"
console = "0.15"
dialoguer = "0.11"
thiserror = "2"
chrono = "0.4"
glob = "0.3"
dirs = "5"
base64 = "0.22"
self_update = { version = "0.41", features = ["archive-tar", "archive-zip", "compression-flate2"] }

[dev-dependencies]
tempfile = "3"
